--- a/app.json
+++ b/app.json
@@ -11,9 +11,8 @@
 			"description": "Aria2c's secret",
 			"value": "DEFAULT_SECRET"
 		},
-		"RCLONE_CONFIG": {
-			"description": "Rclone config to mount in one line, replace line breaks with \"\\n\"",
-			"required": false
+		"RCLONE_CONFIG_BASE64": {
+			"description": "Put the Base64 encoded rclone conf"
 		},
 		"RCLONE_DESTINATION": {
 			"description": "Path to store your file in your Rclone drive. Must start with a forward slash.",
